--- a/index.html
+++ b/index.html
@@ -371,11 +371,50 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="icon-close-btn" data-modal-close>X
-                <!-- <svg class="icon-close" width="30" height="30">
+            <button type="button" class="icon-close-btn" data-modal-close>
+                <svg class="icon-close" width="11" height="11">
                     <use href="./images/symbol-defs.svg#icon-close"></use>
-                </svg> -->
+                </svg>
             </button>
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <form>
+                <label class="modal-label" for="user-name">Имя</label>
+                <div class="modal-field">
+                    <input type="text" name="user-name" id="user-name" class="modal-input">
+                    <span class="modal-icon">
+                        <svg class="icon-person" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-person"></use>
+                        </svg>
+                    </span>
+                </div>
+                <label class="modal-label" for="tel">Телефон</label>
+                <div class="modal-field">
+                    <input type="tel" name="tel" id="tel" class="modal-input">
+                    <span class="modal-icon">
+                        <svg class="icon-phone" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-phone"></use>
+                        </svg>
+                    </span>
+                </div>
+                <label class="modal-label" for="email">Почта</label>
+                <div class="modal-field">
+                    <input type="email" name="email" id="email" class="modal-input">
+                    <span class="modal-icon">
+                        <svg class="icon-email" width="18" height="18">
+                            <use href="./images/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                    </span>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label" for="commit">Комментарий</label>
+                    <textarea name="commit" id="commit" placeholder="Введите текст" class="modal-text-area"></textarea>
+                </div>
+                <div class="modal-field-check">
+                    <input type="checkbox" name="input-check" id="input-check" class="modal-input-check">
+                    <label for="input-check">Соглашаюсь с рассылкой и принимаю</label>
+                </div>
+                <button type="submit" class="modal-btn">Отправить</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
