--- a/portfolio.html
+++ b/portfolio.html
@@ -165,6 +165,17 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-subscription">
+                    <p class="footer-subscription-title">Подпишитесь на рассылку</p>
+                    <form action="">
+                        <input class="footer-subscription-mail" type="email" placeholder="E-mail">
+                        <button class="footer-subscription-btn" type="submit">Подписаться
+                            <svg class="footer-icon-send" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </address>
     </footer>
